fix: custom scrollbar for firefox

--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,8 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scrollbar-color: #255172 transparent;
+  scrollbar-width: thin;
 }
 
 @media screen and (min-width: 1024px) {
